<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/username_label_id"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/username_label_id"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_form"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:text="kminchelle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/username_label"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck"
        app:layout_constraintStart_toEndOf="@+id/username_label_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username_label_id"
        app:layout_constraintBottom_toBottomOf="@+id/username_label_id"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/password_label_id"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_label_id"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/password_label"
        android:text="0lelplR"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck"
        app:layout_constraintStart_toEndOf="@+id/password_label_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/password_label_id"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/hobbies_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:id="@+id/footballCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/football"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_label_id"
        app:layout_constraintBottom_toTopOf="@+id/gender_id"
        />

    <CheckBox
        android:id="@+id/basketballCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basketball"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/footballCheckBox"
        app:layout_constraintTop_toTopOf="@+id/footballCheckBox"
        app:layout_constraintBottom_toBottomOf="@+id/footballCheckBox"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/gender_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        android:layout_marginStart="10dp"
        />

    <RadioGroup
        android:layout_marginStart="10dp"

        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gender_id"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:checked="false" />
    </RadioGroup>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/showUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_dialog"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@android:color/holo_blue_dark" />


</androidx.constraintlayout.widget.ConstraintLayout>